src/css/style.less
body {
	background-color:  #1d2e3f;
	font-family: 		 "Motiva Sans", Sans-serif;
	font-size:           16px;
	background-image:    url("../asset/background.jpg");
	background-repeat:   no-repeat;
	background-position: center;
	background-size:     cover;
}

nav{
	background-color: #253c4ec0;
	color:            white;
}

.navbar {
	top:             0;
	left:            0;
	width:           100%;
	height:          50px;
	position:        absolute;
	z-index:         3;
	letter-spacing: .8px;

	.active .nav-item-container{
		border-color: rgb(52,163,218);
		border-style:   solid;
		border-width:   0 0 4px 0;
		display:        inline-block;
	}
}


.navbar-brand{
	text-align: center;
	position:   absolute;
	left:       0;
	width:      100%;
	img {
		max-height: 40px;
	}
	span{
		position:relative;
		top: 5px;
		left: 3px;
		color: rgb(155, 166, 189);
		letter-spacing: 1px;
		font-size: 22px;
	}
	:nth-child(3){
		color: rgb(111, 163, 206);
	}
}

.nav-tabs {
	.nav-item {
		&:hover{
			color: rgb(189, 189, 189);
		}
	}
}

#root-container {
	min-height:    100vh;
	margin-top:    80px;
	margin-bottom: 50px;
}

.footer {
	color:        white;
	padding-bottom: 20px;
	a {
		margin: 0 10px;
		color:rgb(202, 200, 200);
	}
}

.card {
	background-color: red; // fallback color.
	background-color: rgba(0, 0, 0, 0.199);
	color:            white;
	padding-bottom:     0;
	margin-bottom:      18px;
}

.card-title {
	margin-bottom: 25px;
	i {
		margin-right: 5px;
	}
}

.card-subtitle {
	color: rgb(194, 194, 194);
	padding-bottom: 10px;
}

.card-body {
	padding-bottom: 10px;
}

.hr {
	border-top:    1px solid black; // fallback.
	border-top:    1px solid rgba(0, 0, 0, 0.2);
	border:        0;
	margin-bottom: 20px;
	margin-top:    20px;
}

.navbar-toggler {
	color:        rgb(253, 253, 253);
	border-color: rgb(199, 198, 198);
	border-radius:  5px;
	border-style:   solid;
	border-width:   1px;
	padding-top:    5px;
	padding-bottom: 4px;
}

.table{
	color:white;

	th {
		border-top: none;
	}
}

#expense-form {
	white-space: nowrap;
}

#entry-container {
	max-height: 320px;
	min-width:  340px;
	overflow-y: auto;
}

#budget-container {
	.table {
		margin-bottom: 30px;
		th{
			border: 0;
		}
		td
		{
			border: 0;
		}
	}
}

